--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles11.css">
-    <title>Chapter 11 Judah Huntoon</title>
+    <title>Christmas Game</title>
 </head>
 <body>
     <div id="stage">
