--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="stage">
+        <h1>Use the Arrow Keys and the Space Button to collect all the Faces!</h1>
         <button id="start">Start Game</button>
         <canvas width="1024" height="768"></canvas>
     </div>
